--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -179,7 +179,7 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-step-900: #e6e6e6;
     --ion-color-step-950: #f2f2f2;
 
-    /*--ion-toolbar-background: #0d0d0d;*/
+    /*--ion-toolbar-background: red;*/
 
     /*--ion-item-background: #000000;*/
   }
@@ -191,8 +191,8 @@ http://ionicframework.com/docs/theming/ */
    */
 
   .md body {
-    --ion-background-color: #121212;
-    --ion-background-color-rgb: 18,18,18;
+    /*--ion-background-color: #121212;*/
+    /*--ion-background-color-rgb: 18,18,18;*/
 
     --ion-text-color: #ffffff;
     --ion-text-color-rgb: 255,255,255;
